<reduced horizontal distance the slinky pig can travel to help avoid side scroll on mobile>

--- a/style.css
+++ b/style.css
@@ -320,7 +320,7 @@ a {
   height: 33vh;
   align-items: center;
   justify-content: center;
-  z-index: 151;g
+  z-index: 151;
   animation-timing-function: ease-out;
 
   /*transparancy for the buttons, or this gradient???? 
